--- a/conf/application.conf
+++ b/conf/application.conf
@@ -8,11 +8,11 @@
 # This must be changed for production, but we recommend not changing it in this file.
 #
 # See http://www.playframework.com/documentation/latest/ApplicationSecret for more details.
-application.secret="f7QWXdAm@gj9fHt>hGKO1V5BC>qR>9nmIr6hx3udZ`n:4Fg_a9:0@tEsm]a<s^kt"
+application.secret="f7QWXdAm@gj9fHdcdcdt>hGKO1V5BC>qmonzDEErhFDfqdR>9nmIr6hx3udZ`n:4Fg_a9:0@t?LLKKK3467ddEsm]a<s^kt"
 
 # The application languages
 # ~~~~~
-application.langs="en"
+application.langs="fr"
 
 # Global object class
 # ~~~~~
